<resources>
    <string name="app_name">BookShelf</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Pets</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <!--Editor Activity Strings-->
    <string name="book_name">Name</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="book_supplier_name">Supplier Name</string>
    <string name="book_supplier_number">Supplier Number</string>

    <string name="editor_activity_title">Add Book</string>
    
    <string name="editor_insert_book_success">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding a Book</string>

</resources>
